--- a/src/components/captions.css
+++ b/src/components/captions.css
@@ -1,6 +1,6 @@
 .mainHeader {
   color: #161616;
-  font-size: 32px;
+  font-size: clamp(16px, 5vh,32px);
   font-weight: 700;
   line-height: 38px;
   text-align: center;
@@ -8,7 +8,7 @@
 
 .subHeader {
   color: #030303;
-  font-size: 25px;
+  font-size: clamp(12px, 3vh,25px);
   font-weight: 500;
   line-height: 38px;
   text-align: center;
@@ -16,7 +16,7 @@
 
 .description {
   color: #030303;
-  font-size: 20px;
+  font-size: clamp(12px, 3vh,20px);;
   font-weight: 400;
   line-height: 28px;
   text-align: center;
